worked on references.html, style-references.css, resume.html, and style-resume.css

--- a/style.css
+++ b/style.css
@@ -129,7 +129,9 @@ header{
     background-color: var(--title);
 }
     .left .columnA{
-        margin-top: 10px;
+        margin-top: 10px;    
+        justify-content: center;
+
     }
 .middle{
     grid-area: bio;
