--- a/style-resume.css
+++ b/style-resume.css
@@ -32,16 +32,16 @@ body {
 }
 .site{
     width: 100%;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 5fr;
-    grid-template-areas:
-        "top"
-        "title"
-        "main"
-        "side"
-        "bottom";
     font-size: 16px;
+    display: grid;
+    grid-template-columns: auto 300px;
+    grid-template-rows: 250px auto 145px;
+    /* grid-auto-rows:  */
+    grid-template-areas:
+        "top top"
+        "main side"
+        "bottom bottom";
+    
 }
 .top-header{
     grid-area: top;
@@ -90,82 +90,41 @@ header{
         text-decoration: underline;
         color: var(--almost-white);
     }
-.title {
-    grid-area: title;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-    .title h1 {
-        font-family: Playfair Display Regular;
-        font-size: 50px;
-        color: var(--title);
-    }
-.main-content {
+#resume-main{
     grid-area: main;
-    margin-left: 20px;
-    margin-right: 20px;
 }
-    .main-content .aboutSD {
-        padding-bottom: 20px;
-    }
-        .main-content .aboutSD h2 {
-            font-family: KG I Want Crazy;
-            text-align: center;
-            font-size: 25px;
-            color: var(--title);
-        }
-.side-content {
+
+
+
+
+
+
+#resume-sidebar{
     grid-area: side;
-    /* nested grid */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-        "bunny bio pic";
-    grid-gap: 1px;
 }
-.left{
-    grid-area: bunny;
-    background-color: var(--title);
+
+/* #resume{
+    grid-area: main;
+    display: flex;
+    flex-direction: row;
+
 }
-    .left .columnA{
-        margin-top: 10px;
-    }
-.middle{
-    grid-area: bio;
-    background-color: var(--title);
-    font-size: 30px;
-    line-height: 45px;
-    font-family: Playfair Display;
-    text-align: center;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding-right: 10%;
-    padding-left: 10%;
-    color: var(--almost-white);
+
+#resume-main{
+    flex-grow: 1;
+    height: auto;
 }
-/* link in middle section - actions*/
-    .middle a:link{
-        text-decoration: none;
-        color: var(--almost-white);
-    }
-    .middle a:visited{
-        text-decoration: none;
-        color: var(--almost-white);
-    }
-    .middle a:hover{
-        text-decoration: underline;
-        color: var(--pink-highlighter);
-    }
-    .middle a:active{
-        text-decoration: underline;
-        color: var(--darkgrey-text);
-    }
-.right{
-    grid-area: pic;
-    background-color: var(--title);
-}
+#resume-sidebar{
+    flex-grow: 1; 
+    height: auto;
+    width: 800px;
+}  */
+
+
+
+
+
+
 .bottom-footer{
     grid-area: bottom;
     text-align: center;
@@ -187,7 +146,6 @@ header{
     /* outline-style: solid;
     outline-color: black; */
 }
-
 /* social network links */
 .links-socialnetworks ul{
     list-style-type: none;
