--- a/style-contact.css
+++ b/style-contact.css
@@ -1,6 +1,4 @@
 @font-face{
-    src: url(fonts/AGentleTouch.ttf);
-    font-family: A Gentle Touch;
     src: url(fonts/KGIWantCrazy.otf);
     font-family: KG I Want Crazy;
     src: url(fonts/PlayfairDisplay-Bold.ttf);
@@ -14,7 +12,13 @@
     src: url(fonts/Monaco.ttf);
     font-family: Monaco;
     src: url(fonts/HelveticaNeue.ttc);
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue;   
+    src: url(fonts/HGMaruGothicMPRO-Medium.ttf);
+    font-family: HGMaruGothicMedium; 
+    src: url(fonts/HeroLight.otf);    
+    font-family: HeroLight;
+    src: url(fonts/HelveticaNeue-UltraLight.otf);    
+    font-family: Helvetica Neue Ultra Light;
 }
 :root{
     --background: #FFEFF1;
@@ -23,25 +27,27 @@
     --darkgrey-text: #847676;
     --header-footer: #FFD6DE;
     --almost-white: #FFEFF1;
+    --white: #FFFFFF;
 }
 body {
     background-color: var(--background);
-    font-family: Helvetica Neue;
+    /* background-image: url(images/purpleglitter.jpg); */
+    background-size:contain;
+    font-family:'Montserrat', sans-serif;
+    font-weight: 300;
     line-height: 25px;
     color: var(--darkgrey-text);
 }
 .site{
     width: 100%;
+    font-size: 16px;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 5fr;
+    grid-template-rows: 250px auto 145px;
     grid-template-areas:
-        "top"
-        "title"
-        "main"
-        /* "side" */
-        "bottom";
-    font-size: 16px;
+        "top top top"
+        "left main right"
+        "bottom bottom bottom";
 }
 .top-header{
     grid-area: top;
@@ -89,25 +95,130 @@ header{
         text-decoration: underline;
         color: var(--almost-white);
     }
-.title {
-    grid-area: title;
-    margin-left: 20px;
-    margin-right: 20px;
+#left{
+    grid-area: left;
+    background-image: url(images/purpleglitter.jpg);
+    background-size: cover;
 }
-    .title h1 {
-        font-family: Playfair Display Regular;
-        font-size: 50px;
-        color: var(--title);
-    }
-.main-content {
+#right{
+    grid-area: right;
+    background-image: url(images/purpleglitter.jpg);
+    background-color: #5B60CA;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/* #picture{
+    grid-area: side;
+    width: 650px;
+    position: relative;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+    justify-content: center;
+} */
+#contact{
     grid-area: main;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 300px;
-
+    justify-content: center;
+    justify-items: center;
+    margin-right: auto;
+    margin-left: auto;    
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#contact p{
+    text-align: center;
+}
+.contact-form{
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    /* grid-template-columns: (minmax(0,1fr), minmax(0,1fr)); */    
+    /* grid-template-columns: 1fr 1fr; */
+    grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
+    grid-template-areas:
+    "fname lname"
+    "phone email"
+    "subj subj"
+    "msg msg"
+    "submit submit";
+    grid-row-gap: 15px;
+    grid-column-gap: 15px;
+}
+#firstname{
+    grid-area: fname;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#lastname{
+    grid-area: lname;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#phone{
+    grid-area: phone;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#email{
+    grid-area: email;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#subject{
+    grid-area: subj;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#message{
+    grid-area: msg;
+    /* outline-style: solid;
+    outline-color: black; */
+}
+#submit{
+    grid-area: submit;
+}
+.field{
+    font-family: Hero;
 }
 
 
+
+
+
+
+
+/* headings */
+h1{
+    text-transform: uppercase;
+    font-family: Helvetica Neue Ultra Light;
+    font-size: 45px;
+    text-align: center;
+    /* padding: 10px; */
+}
+h2{
+    text-transform: uppercase;
+    font-family: Helvetica Neue Ultra Light;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 10px;
+}
+h3{
+    text-transform: uppercase;
+    font-family: Helvetica Neue Ultra Light;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 10px;
+}
+h4{
+    text-transform: uppercase;
+    font-family: Helvetica Neue Ultra Light;
+    font-size: 30px;
+    text-align: center;
+    color: var(--almost-white);
+}
 .bottom-footer{
     grid-area: bottom;
     text-align: center;
@@ -129,7 +240,6 @@ header{
     /* outline-style: solid;
     outline-color: black; */
 }
-
 /* social network links */
 .links-socialnetworks ul{
     list-style-type: none;
@@ -203,3 +313,9 @@ header{
         color: var(--almost-white);
         text-decoration: underline;
     }
+#css-validator p{
+    grid-area: lower-left;
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
